# DynELA-v3.0

./: Changelog  README.md
Documentation/: Bibliography.bib  Cover.odp  DynELA.lyx  DynELA.tex  ElementSamples.lyx  ElementSamples.tex  ImpactSamples.lyx  ImpactSamples.tex  Installation.tex  Makefile  Maths.lyx  NotationsMec.tex  PlasticitySamples.lyx  PlasticitySamples.tex  Private.bib  ProgrammingAbaqusExtract.lyx  ProgrammingAbaqusExtract.tex  ProgrammingCurves.lyx  ProgrammingCurves.tex  ProgrammingLanguage.lyx  ProgrammingLanguage.tex  TensorNotations.lyx  macrosGene.tex  macrosHyperlink.tex  macrosHyperlinkEnglish.tex  pageGarde.odp
Documentation/Algorithms/: computeDensity.tikz  computeFI.tikz  computeJacobian.tikz  computePressure.tikz  computeRFI.tikz  computeStrains.tikz  computeStress.tikz  explicitSolve.tikz  void.tikz
Samples/BarNecking/: Makefile
Samples/BarNecking/BarNecking-3D/: BarNecking.py  Curves.ex  Makefile
Samples/BarNecking/BarNecking-3D/Abaqus/: BarNecking.inp  Extract.ex  Makefile
Samples/BarNecking/BarNecking-Axi/: BarNecking.py  Curves.ex  Makefile  runBench.py
Samples/BarNecking/BarNecking-Axi/Abaqus/: BarNecking.inp  Extract.ex  Makefile
Samples/Element/: Makefile
Samples/Element/Radial/ElQua4NAx/: Curves.ex  Makefile  Radial.py  runBench.py
Samples/Element/Radial/ElQua4NAx/Abaqus/: Extract.ex  Makefile  Radial.inp
Samples/Element/Shear/: Makefile
Samples/Element/Shear/ElQua4N2D/: Curves.ex  Makefile  Shear.py  runBench.py
Samples/Element/Shear/ElQua4N2D/Abaqus/: Makefile  Shear.inp
Samples/Element/Shear/Elastic/: Curves.ex  Makefile  Shear-Elastic.py  runBench.py
Samples/Element/Shear/Elastic/Abaqus/: Extract.ex  Makefile  Shear.inp
Samples/Element/Shear/Elastic/Analytic/: AnalyticSolutions.py  Makefile
Samples/Element/Tensile/: Makefile
Samples/Element/Tensile/ElHex8N3D/: Curves.ex  Makefile  Tensile.py  runBench.py
Samples/Element/Tensile/ElHex8N3D/Abaqus/: Extract.ex  Makefile  Tensile.inp
Samples/Element/Tensile/ElQua4N2D/: Curves.ex  Makefile  Tensile.py
Samples/Element/Tensile/ElQua4N2D/Abaqus/: Extract.ex  Makefile  Tensile.inp
Samples/Element/Torus/: Makefile
Samples/Element/Torus/ElQua4NAx/: Curves.ex  Makefile  Torus.py  runBench.py
Samples/Element/Torus/ElQua4NAx/Abaqus/: Extract.ex  Makefile  Torus.inp
Samples/PlateNecking/: Curves.ex  Makefile  PlateNecking.py  runBench.py
Samples/PlateNecking/Abaqus/: Extract.ex  Makefile  PlateNecking.inp
Samples/Taylor/: Makefile
Samples/Taylor/Taylor-3D/: Curves.ex  Makefile  Taylor.py  runBench.py
Samples/Taylor/Taylor-3D/Abaqus/: Extract.ex  Makefile  Taylor.inp
Samples/Taylor/Taylor-Axi/: Curves.ex  Makefile  Taylor.py  runBench.py
Samples/Taylor/Taylor-Axi/Abaqus/: Extract.ex  Makefile  Taylor.inp
Sources/: CMakeLists.txt
Sources/dnlBC/: Boundary.C  Boundary.h  BoundaryAcceleration.C  BoundaryAcceleration.h  BoundaryCondition.C  BoundaryCondition.h  BoundaryConvection.C  BoundaryConvection.h  BoundaryDisplacement.C  BoundaryDisplacement.h  BoundaryFlux.C  BoundaryFlux.h  BoundaryForce.C  BoundaryForce.h  BoundaryRestrain.C  BoundaryRestrain.h  BoundarySpeed.C  BoundarySpeed.h  BoundaryTemperature.C  BoundaryTemperature.h  CMakeLists.txt  dnlBC.h
Sources/dnlElements/: CMakeLists.txt  ElHex8N3D.C  ElHex8N3D.h  ElQua4N2D.C  ElQua4N2D.h  ElQua4NAx.C  ElQua4NAx.h  ElTet10N3D.C  ElTet10N3D.h  ElTet4N3D.C  ElTet4N3D.h  ElTri3N2D.C  ElTri3N2D.h  Element.C  Element.h  Element2D.C  Element2D.h  Element3D.C  Element3D.h  ElementAxi.C  ElementAxi.h  ElementData.h  ElementPlane.C  ElementPlane.h  ElementSet.C  ElementSet.h  NodalField.C  NodalField.h  Node.C  Node.h  NodeSet.C  NodeSet.h  dnlElements.h
Sources/dnlFEM/: CMakeLists.txt  Domain.C  Domain.h  Drawing.C  Drawing.h  DynELA.C  DynELA.h  Explicit.C  Explicit.h  ExplicitOld.C  ExplicitOld.h  HistoryFile.C  HistoryFile.h  Model.C  Model.h  Parallel.C  Parallel.h  Polygon.C  Polygon.h  Solver.C  Solver.h  SvgInterface.C  SvgInterface.h  VtkInterface.C  VtkInterface.h
Sources/dnlKernel/: CMakeLists.txt  Defines.h  Errors.C  Errors.h  Exception.C  Exception.h  Field.C  Field.h  List.h  LogFile.C  LogFile.h  MacAddress.C  MacAddress.h  Macros.h  Settings.C  Settings.h  String.C  String.h  System.C  System.h  Timer.C  Timer.h  dnlKernel.h
Sources/dnlMaterials/: CMakeLists.txt  ElasticLaw.C  ElasticLaw.h  ElastoplasticLaw.C  ElastoplasticLaw.h  HardeningLaw.C  HardeningLaw.h  IntegrationPoint.C  IntegrationPoint.h  JohnsonCookLaw.C  JohnsonCookLaw.h  Material.C  Material.h  TabularLaw.C  TabularLaw.h  dnlMaterials.h
Sources/dnlMaths/: CMakeLists.txt  ColorMap.C  ColorMap.h  CrackFunction.C  CrackFunction.h  DiscreteFunction.C  DiscreteFunction.h  DiscreteFunctionSet.C  DiscreteFunctionSet.h  Function.C  Function.h  Matrices.h  Matrix.C  Matrix.h  MatrixDiag.C  MatrixDiag.h  NumpyInterface.C  NumpyInterface.h  PolynomialFunction.C  PolynomialFunction.h  RampFunction.C  RampFunction.h  SinusFunction.C  SinusFunction.h  SymTensor2.C  SymTensor2.h  Tensor2.C  Tensor2.h  Tensor3.C  Tensor3.h  Tensor4.C  Tensor4.h  Vec3D.C  Vec3D.h  Vector.C  Vector.h  dnlMaths.h
Sources/dnlPython/: CMakeLists.txt  dnlBC.inc  dnlElements.inc  dnlFEM.inc  dnlKernel.inc  dnlMaterials.inc  dnlMaths.inc  dnlPython.i
Sources/dnlSettings/: CMakeLists.txt  configuration.dnl
Sources/dnlUtils/: AbaqusExtract.py  CMakeLists.txt  dnlBench.py  dnlCurves.py
